--- a/mod application.html
+++ b/mod application.html
@@ -5,19 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moderator Application</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; background-color: #1e1e1e; color: #fff; text-align: center; }
-        .container { background: #2a2a2a; padding: 20px; border-radius: 10px; width: 80%; max-width: 600px; margin: auto; }
+        body { font-family: Arial, sans-serif; background-color: #1e1e1e; color: #fff; text-align: center; padding: 20px; }
+        .container { background: #2a2a2a; padding: 20px; border-radius: 10px; width: 80%; max-width: 500px; margin: auto; }
         label { font-weight: bold; display: block; margin-top: 10px; text-align: left; }
-        input, textarea, select { width: 100%; padding: 8px; margin-top: 5px; background: #333; color: #fff; border: 1px solid #444; border-radius: 5px; }
+        input, textarea { width: 100%; padding: 8px; margin-top: 5px; background: #333; color: #fff; border: 1px solid #444; border-radius: 5px; }
         button { background: #007bff; color: white; padding: 10px; border: none; margin-top: 15px; cursor: pointer; width: 100%; }
         button:hover { background: #0056b3; }
-        h2 { color: #ffcc00; }
     </style>
 </head>
 <body>
 
-    <h2>Epicade's Hangout - Moderator Application</h2>
-
+    <h2>Epicade's Moderator Application</h2>
+    
     <div class="container">
         <form action="https://formsubmit.co/epecade@yahoo.com" method="POST">
             <input type="hidden" name="_captcha" value="false">
