--- a/mod application.html
+++ b/mod application.html
@@ -18,8 +18,10 @@
     <h2>Epicade's Moderator Application</h2>
     
     <div class="container">
-        <form action="https://formsubmit.co/epecade@yahoo.com" method="POST">
+        <form action="https://formsubmit.co/your-custom-link" method="POST">
             <input type="hidden" name="_captcha" value="false">
+            <input type="hidden" name="_template" value="table">
+            <input type="hidden" name="_next" value="https://yourwebsite.com/success.html">
             
             <label>Discord Username (with #ID):</label>
             <input type="text" name="Discord Username" required>
